[package]
name = "rdc_connections"
version = "0.0.6"
edition = "2021"
authors = ["Rajat Rajput <rajputrajat@gmail.com>"]
description = "to query windows RDP connections"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rajputrajat/rdc_connections.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
log = "0.4.14"
windows = "0.21.1"
winsafe = "0.0.6"

[build-dependencies]
windows = "0.21.1"
